/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Keondez Robinson
 */

package ucf.assignments;

public class Item {
    // boolean field indicating current status
    // String field indicating name
    // String field as the formatted date

    // Constructor ()
    // -- initialize name and date passed in from user
    // -- new item means status is incomplete, set to false

    // Methods
    // -- setter method for the status of item (setComplete())
    // -- getter method for status (isComplete())
    // -- setter method for the text of item (setText())
    // -- getter method for text (getText())
    // -- setter method for the date of item (setDate())
    // -- getter method for date (getDate())
}
